--- a/Practic-project-1-claint/src/Pages/Shared/Header/Header.css
+++ b/Practic-project-1-claint/src/Pages/Shared/Header/Header.css
@@ -11,7 +11,6 @@
     font-family: Gill Sans;
     margin-bottom: 0;
 }
-
 .head-title h4 {
     background-image: linear-gradient(60deg, #ffdfbb,#ffcca2, #ffc38b, rgb(253, 224, 185));
     background-clip: text;
@@ -19,11 +18,10 @@
 
 }
 
-.bgcolor {
-    background: rgb(255, 255, 255);
-    color: black;
-}
-Nav.Link {
-    color: black
-    ;
+ .bgcolor {
+    background: rgb(255, 231, 231);
+
+ }
+.customLink{
+    text-decoration: none;
 }
