update register and login

--- a/Practic-project-1-claint/src/Pages/Shared/Header/Header.css
+++ b/Practic-project-1-claint/src/Pages/Shared/Header/Header.css
@@ -27,3 +27,8 @@
 .customLink{
     text-decoration: none;
 }
+.signout-btn{
+    border: none;
+    background: inherit;
+    color: rgb(46, 0, 107);
+}
