--- a/Practic-project-1-claint/src/Pages/Home/MuusmCount/MuusmCount.css
+++ b/Practic-project-1-claint/src/Pages/Home/MuusmCount/MuusmCount.css
@@ -1,5 +1,24 @@
-.muusm-count-bg{
-    background: rgb(229, 216, 241);
+.count-heading{
+    height: 90px;
+    color: rgb(7, 0, 105);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#counter{
+    /* background: url('https://thumbs.dreamstime.com/b/college-students-books-smiling-to-camera-over-grey-wall-having-break-155809721.jpg') center center fixed; */
+    background-color: rgba(6, 39, 129, 0.966);
+    background-size: cover;
+    font-family: monospace;
+}
+/* .muusm-count-bg{
+    background: rgb(241, 229, 216);
+} */
+h1{
+    color: rgb(255, 123, 0);
+}
+h4{
+    color: rgb(255, 145, 0);
 }
 .muusmcount{
     padding: 60px;
@@ -9,7 +28,8 @@
 .muus-count-dev{
     height: 250px;
     width: 250px;
-    background: rgb(229, 157, 247);
+    background: inherit;
+    border-radius: 4px;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -20,11 +40,32 @@
     padding: 25px;
     background-color: rgba(255, 212, 162, 0.384);
 }
-.muus-count-dev i{
-    font-size: 50px;
-    padding: 20px;
+.founded{
+    font-size: 34px;
+    padding: 30px;
     border-radius: 50%;
-    background-color: rgba(196, 138, 255, 0.692);
+    background-color: rgba(143, 172, 250, 0.308);
+    border: 2px solid rgb(255, 166, 0);
+}
+.teachers{
+    font-size: 30px;
+    padding: 30px;
+    border-radius: 50%;
+    background-color: rgba(143, 172, 250, 0.308);
+    border: 2px solid rgb(255, 166, 0);
+}
+.students{
+    font-size: 30px;
+    padding: 30px;
+    border-radius: 50%;
+    background-color: rgba(143, 172, 250, 0.308);
+    border: 2px solid rgb(255, 166, 0);
+}
+.re-award{
+    font-size: 38px;
+    padding: 30px;
+    border-radius: 50%;
+    background-color: rgba(143, 172, 250, 0.308);
     border: 2px solid rgb(255, 166, 0);
 }
 
