--- a/Practic-project-1-claint/src/Pages/Links/ConnectUs/ConnectUs.css
+++ b/Practic-project-1-claint/src/Pages/Links/ConnectUs/ConnectUs.css
@@ -5,7 +5,7 @@
     margin-top: 50px;
     padding-left: 20px;
     border-radius: 5px;
-    height: 40px;
+    padding: 13px;
     display: flex;
     align-items: center;
     color: bisque;
