--- a/Practic-project-1-claint/src/Pages/Home/HmEvent&Notices/HmEvent&Notices.css
+++ b/Practic-project-1-claint/src/Pages/Home/HmEvent&Notices/HmEvent&Notices.css
@@ -3,12 +3,11 @@
     background-color: rgb(236, 237, 255);
 }
 .eventNotice{
-    display: flex;
     grid-gap: 30px;
+    display: flex;
     justify-content: center;
 }
 .events{
-    margin: auto;
 /*     border: 3px solid rgb(255, 195, 30);
     background-color: rgb(159, 129, 189); */
 }
@@ -32,7 +31,6 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 .notices{
-    margin: auto;
     /* border: 3px solid rgb(255, 100, 10);
     background-color: rgb(181, 107, 255); */
 }
@@ -73,12 +71,14 @@
     .event-dev{
         grid-gap: 20px;
     }
+    
 }
 @media screen and (max-width:750px){
     .event-dev{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
     }
+
 }
 
 @media screen and (max-width:1200px){
@@ -88,5 +88,11 @@
     }
     .event-btn{
         padding-bottom: 30px;
+    }
+    .events{
+        margin: auto;
+    }
+    .notices{
+        margin: auto;
     }
 }
