--- a/Practic-project-1-claint/src/Pages/Shared/Header/Header.css
+++ b/Practic-project-1-claint/src/Pages/Shared/Header/Header.css
@@ -1,12 +1,11 @@
 .head-title {
-    height: 50px;
+    padding: 3px  20px;
     background: rgb(10, 0, 151);
     display: flex;
     align-items: center;
     justify-content: center;
     border-bottom: 2px solid rgb(255, 153, 0);
 }
-
 .head {
     font-size: 35px;
     font-family: Gill Sans;
@@ -18,14 +17,9 @@
     color: transparent;
 
 }
-
  .bgcolor {
     background: rgb(255, 255, 255);
     border-bottom: 2px solid rgba(255,166,0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
  }
 .customLink{
     text-decoration: none;
